Add initial highscore logic

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <h2>All done!</h2>
                 <p>Input your initials and save your score</p>
                 <label>Enter initials: </label>
-                <input type="text" id="score-initials">
-                <button value="Submit">Submit</button>
+                <input id="player-initials" type="text" id="score-initials">
+                <button onclick="saveScore()" value="Submit">Submit</button>
             </section>
             <section id="quiz-feedback">
                 <span id="feedback-text">Placeholder feeback text!</span>
