Fixed ordering of scores when saving

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </section>
             <section id="save-score">
                 <h2>All done!</h2>
+                <p>Your score was <span id="final-score"></span>!</p>
                 <p>Input your initials and save your score</p>
                 <label>Enter initials: </label>
                 <input id="player-initials" type="text" id="score-initials">
