Updated README; updated link on index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <div class="highscore"><span><a href="#">High Score</a></span></div>
+            <div class="highscore"><span><a href="highscore.html">High Score</a></span></div>
             <div class="timer"><span>Time: </span><span id="countdown">60</span></div>
         </header>
         <section class="main">
